Fix jumping screen on mobile device

--- a/src/components/sections/About/About.scss
+++ b/src/components/sections/About/About.scss
@@ -5,7 +5,7 @@
   position: relative;
   min-width: 100%;
   flex: 0 0 100%;
-  max-height: 100dvh;
+  max-height: 100vh;;
 
   @media(min-width: breakpoints.$largeBreakpointMin) {
     display: flex;
@@ -51,7 +51,7 @@
     position: relative;
     color: colors.$white;
     font-size: 1.9rem;
-    height: 100dvh;
+    height: 100vh;
     padding-bottom: 3rem;
 
     @media(min-width: breakpoints.$mediumBreakpointMin) {
