--- a/src/components/sections/Implementations/Implementations.scss
+++ b/src/components/sections/Implementations/Implementations.scss
@@ -11,7 +11,7 @@
 
 .spotify {
   width: 100%;
-  height: 86dvh;
+  height: 86vh;
 
   @media(min-width: breakpoints.$mediumBreakpointMin) {
     height: 88vh;
