--- a/src/components/sections/Studio/Studio.scss
+++ b/src/components/sections/Studio/Studio.scss
@@ -12,7 +12,7 @@
   
     @media(min-width: breakpoints.$largeBreakpointMin) {
       width: calc(100% - 30%);
-      height: 75dvh;
+      height: 75vh;
     }
 
     .speakerWrapper {
