--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@ h1 {
 }
 
 section {
-  min-height: 100dvh;
+  min-height: 100vh;
 }
 
 a {
